[package]
name = "Tors"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.41.1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
hex_color = "3.0.0"
colored = "2.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"